--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
         <section class="content">
             <img src="icon.PNG" alt="">
             <h1>Join our newsletter</h1>
-            <p>Keep up with our latest collections, exclusive deals, 
-                and special offers! We introduce a new collection every week, 
-                so stay tuned to snag the hottest items just for you.</p>
+            <p>Keep up with our latest collections, exclusive deals, and special offers! <br>
+                We introduce a new collection every week, so stay tuned to snag the <br>
+                hottest items just for you.</p>
         </section>
 
         <section class="form-card">
             <form action="">
-                <input type="email" name="" class="email-box">
-                <button type="submit">Subscribe now</button>
+                <input type="email" name="" class="email-box" id="email" placeholder="Enter your email address">     
+                <button type="submit" class="sub_button">Subscribe now</button>
             </form>
+            <p>Your email is 100% confidential and won’t send you any spam.</p>
         </section>
     </main>
 </body>
